<?xml version="1.0"?>
<package format="2">
  <name>local_planner</name>
  <version>0.0.0</version>
  <description>Local Planner</description>

  <maintainer email="jboylan@fsu.edu">Jonathan T. Boylan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>grid_map_ros</depend>
  <depend>grid_map_filters</depend>
  <depend>roscpp</depend>

</package>
